<resources>
    <string name="app_name">Happy-driver</string>
    <string name="sign_in">SIGN IN</string>
    <string name="looking_for_the_rider_app">LOOKING FOR THE RIDER APP</string>
    <string name="partner">PARTNER</string>
    <string name="happy_driver">HAPPY DRIVER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="title_activity_home_map">Map</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="find_driver">FIND DRIVER</string>
</resources>
