<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bus"
    android:id="@+id/rootRegisterLayout"
    tools:context="com.happycity.project.happydriver.ui.login.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/happy_driver"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/partner"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/txt_rider_app"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/looking_for_the_rider_app"
        android:textSize="12sp"
        android:textColor="@color/colorBottomText"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@+id/txt_rider_app"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp" />
        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp" />
    </LinearLayout>
</RelativeLayout>
